--- a/style.css
+++ b/style.css
@@ -53,7 +53,9 @@ li {
   width: auto;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding-top: 2%;
+  padding-bottom: 13%;
 }
 .homeLeft {
   width: auto;
@@ -120,18 +122,87 @@ button:hover {
 #secCircle {
   width: 140%;
   position: absolute;
-  z-index: -2;
+  z-index: 0;
 }
 #firCircle {
   width: 140%;
   position: absolute;
-  z-index: -1;
+  z-index: 1;
   padding-left: 20%;
   padding-top: 10%;
 }
 #man {
   width: 180%;
   position: relative;
-  z-index: 0;
+  z-index: 2;
   padding-top: 25%;
+}
+
+.aboutMe {
+  width: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 12%;
+  padding-bottom: 12%;
+}
+
+.abutLeft {
+  width: 50%;
+  justify-content: center;
+  align-items: center;
+}
+
+.aboutImg {
+  position: relative;
+  padding-top: 15%;
+  padding-left: 95%;
+  align-items: center;
+  justify-content: center;
+  width: auto;
+}
+
+#secRec {
+  width: 203%;
+  position: absolute;
+  z-index: 0;
+  transition: 1s;
+  transform: rotate(20deg);
+}
+
+#firRec {
+  width: 203%;
+  position: absolute;
+  z-index: 1;
+  transition: 1s;
+  transform: rotate(5deg);
+}
+
+#myImg {
+  width: 4000%;
+  position: relative;
+  z-index: 2;
+  padding-left: 2.5px;
+  transition: 1s;
+  transform: rotate(-10deg);
+}
+
+.aboutImg:hover > #myImg {
+  transition: 0.3s;
+  transform: rotate(0deg);
+}
+.aboutImg:hover > #firRec {
+  transition: 0.3s;
+  transform: rotate(0deg);
+}
+.aboutImg:hover > #secRec {
+  transition: 0.3s;
+  transform: rotate(0deg);
+}
+
+.aboutRight {
+  width: 50%;
+  justify-content: center;
+  align-items: center;
+  padding-right: 2%;
 }
