--- a/style.css
+++ b/style.css
@@ -222,16 +222,50 @@ button:hover {
   width: auto;
   justify-content: center;
   align-items: center;
-  padding-left: 10%;
+  padding-top: 2%;
+  padding-right: 35%;
+  padding-left: 1%;
+}
+.textIcon {
+  align-items: center;
+  justify-content: center;
+  padding-left: 100%;
+  width: 50%;
 }
 
-.contactRight {
-  width: auto;
-  justify-content: center;
+.textIcon h2 {
+  padding: 0% 10% 0% 10%;
+}
+
+.socialMeadia {
+  width: 150%;
   align-items: center;
-  padding-right: 5%;
+  padding-top: 5%;
 }
 
 #contactImg {
-  width: 200%;
+  width: 250%;
+  padding-left: 20%;
+}
+
+.contactRight {
+  width: 40%;
+  justify-content: center;
+  align-items: center;
+  padding-right: 10%;
+}
+
+input[type="text"],
+input[type="email"],
+textarea {
+  width: 100%;
+  background-color: #d9d9d9;
+  color: black;
+  padding: 2%;
+  border: none;
+  border-radius: 5px;
+  box-sizing: border-box;
+  margin-top: 1%;
+  margin-bottom: 1%;
+  resize: vertical;
 }
