--- a/style.css
+++ b/style.css
@@ -11,19 +11,23 @@ body {
   font-family: "Open Sans", sans-serif;
 }
 .navContainor {
-  width: auto;
+  width: 100%;
   display: flex;
   padding-top: 15px;
+  padding-bottom: 15px;
   justify-content: space-between;
   align-items: center;
+  position: fixed;
+  z-index: 10;
+  background-color: black;
 }
 .logo {
   width: auto;
 }
 
 .logo a img {
-  position: absolute;
-  width: 30%;
+  position: fixed;
+  width: 40%;
   padding-top: 8%;
 }
 
@@ -55,7 +59,7 @@ li {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-top: 2%;
+  padding-top: 5%;
   padding-bottom: 13%;
 }
 .homeLeft {
@@ -147,7 +151,7 @@ input[type="submit"]:hover {
   justify-content: space-between;
   align-items: center;
   padding-top: 14%;
-  padding-bottom: 10%;
+  padding-bottom: 15%;
   padding-left: 3%;
 }
 
@@ -220,7 +224,7 @@ input[type="submit"]:hover {
   justify-content: space-between;
   align-items: center;
   padding-top: 5%;
-  padding-bottom: 5%;
+  padding-bottom: 6%;
 }
 
 .contactLeft {
@@ -241,6 +245,7 @@ input[type="submit"]:hover {
 
 .textIcon h2 {
   padding-left: 22%;
+  font-size: 155%;
 }
 
 .socialMeadia {
@@ -289,6 +294,7 @@ textarea {
 input[type="submit"] {
   z-index: 0;
   position: absolute;
+  padding-right: 10px;
 }
 
 #sendImg {
