--- a/style.css
+++ b/style.css
@@ -23,12 +23,11 @@ body {
 }
 .logo {
   width: auto;
+  z-index: 11;
 }
 
 .logo a img {
   position: fixed;
-  width: 40%;
-  padding-top: 8%;
 }
 
 a {
@@ -43,6 +42,7 @@ a:hover {
   list-style-type: none;
   display: flex;
   padding-right: 20px;
+  padding-left: 1000px;
   align-items: center;
 }
 
